--- a/pages/login.html
+++ b/pages/login.html
@@ -168,138 +168,11 @@
     </nav>
 
     <!-- Background Decorative Elements -->
-<<<<<<< HEAD
-    <div class="fixed inset-0 overflow-hidden pointer-events-none">
-=======
     <!-- <div class="fixed inset-0 overflow-hidden pointer-events-none">
->>>>>>> 08b6f75 (added user dashboard stocks)
       <div class="absolute top-20 left-10 w-32 h-32 bg-[#B9B28A] rounded-full opacity-10 float-animation"></div>
       <div class="absolute top-40 right-20 w-24 h-24 bg-[#504B38] rounded-full opacity-10 float-animation" style="animation-delay: -2s;"></div>
       <div class="absolute bottom-32 left-1/4 w-40 h-40 bg-[#B9B28A] rounded-full opacity-10 float-animation" style="animation-delay: -4s;"></div>
       <div class="absolute bottom-20 right-1/3 w-20 h-20 bg-[#504B38] rounded-full opacity-10 float-animation" style="animation-delay: -1s;"></div>
-<<<<<<< HEAD
-    </div>
-
-    <!-- Main Content -->
-    <div class="flex flex-col justify-center items-center min-h-[calc(100vh-80px)] px-6 py-12 relative">
-      
-      <!-- Title Section -->
-      <div class="text-center mb-12 slide-up">
-        <h1 class="text-6xl font-bold text-[#333024] mb-6 leading-tight flex items-center justify-center gap-3">
-          <img src="logo.svg" alt="Stock Express Logo" class="w-12 h-12 inline-block" />
-          <span class="text-[#504B38]">Welcome to Stock Express</span>
-        </h1>
-        <p class="text-xl font-medium text-[#5e5a48] max-w-2xl mx-auto">
-          Sign in to your account and continue your investment journey
-        </p>
-      </div>
-
-      <!-- Login Container -->
-      <div class="w-full max-w-md">
-        <!-- Login Form -->
-        <div class="form-container p-8 rounded-2xl shadow-2xl slide-in-left">
-          <div class="text-center mb-8">
-            <h2 class="text-3xl font-bold text-[#504B38] mb-2">Sign In</h2>
-            <p class="text-[#5e5a48]">Enter your credentials to access your portfolio</p>
-          </div>
-          
-          <form id="loginForm" class="space-y-6">
-            <!-- Username Input -->
-            <div class="input-group">
-              <div class="relative">
-                <input 
-                  type="text" 
-                  placeholder="Username or Email" 
-                  name="username" 
-                  required
-                  class="w-full p-4 pl-12 rounded-xl bg-[#F8F3D9] text-[#504B38] placeholder-[#5e5a48] focus:outline-none focus:ring-3 focus:ring-[#B9B28A] focus:bg-white transition-all duration-300 border-2 border-transparent focus:border-[#B9B28A]"
-                />
-                <svg class="input-icon absolute left-4 top-1/2 transform -translate-y-1/2 w-5 h-5 text-[#5e5a48]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
-                </svg>
-              </div>
-            </div>
-
-            <!-- Password Input -->
-            <div class="input-group">
-              <div class="relative">
-                <input 
-                  type="password" 
-                  placeholder="Password" 
-                  name="password" 
-                  required
-                  class="w-full p-4 pl-12 rounded-xl bg-[#F8F3D9] text-[#504B38] placeholder-[#5e5a48] focus:outline-none focus:ring-3 focus:ring-[#B9B28A] focus:bg-white transition-all duration-300 border-2 border-transparent focus:border-[#B9B28A]"
-                />
-                <svg class="input-icon absolute left-4 top-1/2 transform -translate-y-1/2 w-5 h-5 text-[#5e5a48]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path>
-                </svg>
-              </div>
-            </div>
-
-            <!-- Remember Me & Forgot Password -->
-            <div class="flex items-center justify-between text-sm">
-              <label class="flex items-center space-x-2 cursor-pointer">
-                <input type="checkbox" class="rounded border-[#B9B28A] text-[#504B38] focus:ring-[#B9B28A] focus:ring-2">
-                <span class="text-[#5e5a48]">Remember me</span>
-              </label>
-              <a href="#" class="text-[#504B38] hover:text-[#333024] font-medium hover:underline transition-colors">
-                Forgot password?
-              </a>
-            </div>
-
-            <!-- Submit Button -->
-            <button 
-              type="submit"
-              class="btn-primary w-full py-4 rounded-xl font-bold text-white text-lg shadow-lg relative overflow-hidden"
-            >
-              Sign In to Portfolio
-            </button>
-          </form>
-
-          <!-- Divider -->
-          <div class="flex items-center my-6">
-            <div class="flex-1 border-t border-[#B9B28A]"></div>
-            <span class="px-4 text-[#5e5a48] text-sm">or</span>
-            <div class="flex-1 border-t border-[#B9B28A]"></div>
-          </div>
-
-          <!-- Social Login Options -->
-          <div class="space-y-3">
-            <button class="w-full py-3 px-4 border-2 border-[#B9B28A] rounded-xl text-[#504B38] font-medium hover:bg-[#B9B28A] hover:text-white transition-all duration-300 flex items-center justify-center space-x-2">
-              <svg class="w-5 h-5" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/>
-                <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
-                <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/>
-                <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/>
-              </svg>
-              <span>Continue with Google</span>
-            </button>
-          </div>
-
-          <!-- Sign Up Link -->
-          <div class="text-center mt-6">
-            <p class="text-[#5e5a48]">
-              Don't have an account? 
-              <a href="signup.html" class="text-[#504B38] font-semibold hover:text-[#333024] hover:underline transition-colors">
-                Create Account
-              </a>
-            </p>
-          </div>
-        </div>
-
-        <!-- Security Notice -->
-        <div class="slide-in-right mt-6 p-4 bg-white/50 backdrop-blur-sm rounded-xl border border-[#B9B28A]/30">
-          <div class="flex items-center space-x-2 text-sm text-[#5e5a48]">
-            <svg class="w-4 h-4 text-[#504B38]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-            </svg>
-            <span>Your data is protected with bank-level 256-bit SSL encryption</span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-=======
     </div> -->
 
     <!-- Main Content -->
@@ -308,7 +181,15 @@
       <!-- Title Section -->
       <div class="text-center mb-12 slide-up">
         <h1 class="text-6xl font-bold text-[#333024] mb-6 leading-tight flex items-center justify-center gap-3">
-          <img src="logo.svg" alt="Stock Express Logo" class="w-12 h-12 inline-block" />
+          <svg class="w-12 h-12 text-[#504B38] float-animation" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="40" height="40" rx="8" fill="currentColor"/>
+            <path d="M12 24L16 20L20 22L28 14" stroke="#F8F3D9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <circle cx="28" cy="14" r="2" fill="#B9B28A"/>
+            <circle cx="20" cy="22" r="2" fill="#B9B28A"/>
+            <circle cx="16" cy="20" r="2" fill="#B9B28A"/>
+            <circle cx="12" cy="24" r="2" fill="#B9B28A"/>
+            <path d="M26 12V16M30 12V16" stroke="#F8F3D9" stroke-width="1.5" stroke-linecap="round"/>
+          </svg>
           <span class="text-[#504B38]">Welcome to Stock Express</span>
         </h1>
         <p class="text-xl font-medium text-[#5e5a48] max-w-2xl mx-auto">
@@ -421,7 +302,6 @@
       </div>
     </div>
 
->>>>>>> 08b6f75 (added user dashboard stocks)
     <!-- Footer -->
     <footer class="bg-[#504B38] text-[#F8F3D9] py-6 px-6 mt-auto">
       <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center">
