--- a/pages/index.html
+++ b/pages/index.html
@@ -114,7 +114,15 @@
       <div class="max-w-6xl mx-auto text-center relative z-10">
         <div class="slide-up">
           <h1 class="text-6xl font-bold text-[#333024] mb-6 leading-tight flex items-center justify-center gap-4">
-            <img src="logo.svg" class="w-10 h-10 object-contain" />
+            <svg class="w-12 h-12 text-[#504B38] float-animation" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect width="40" height="40" rx="8" fill="currentColor"/>
+              <path d="M12 24L16 20L20 22L28 14" stroke="#F8F3D9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <circle cx="28" cy="14" r="2" fill="#B9B28A"/>
+              <circle cx="20" cy="22" r="2" fill="#B9B28A"/>
+              <circle cx="16" cy="20" r="2" fill="#B9B28A"/>
+              <circle cx="12" cy="24" r="2" fill="#B9B28A"/>
+              <path d="M26 12V16M30 12V16" stroke="#F8F3D9" stroke-width="1.5" stroke-linecap="round"/>
+            </svg>
             <span class="text-[#504B38]">Stock Express</span>
           </h1>
       
